move particles to app.js from intro to fix overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,14 @@ body {
 .vipps {
     animation: vipps 3s infinite forwards ease-in-out;
 }
+
+.coronaparticle {
+    position: absolute;
+    display: block;
+    user-select: none;
+    overflow: hidden;
+    pointer-events:none;
+}
 @keyframes heartbeat {
     0% {
         transform: scale(1);
@@ -91,6 +99,12 @@ p {
     font-size: 25%;
     font-weight: normal;
     letter-spacing: 0.1em;
+}
+
+.app {
+    max-width: 100vw;
+    position: relative;
+    overflow-x: hidden;
 }
 
 .App-logo {
