--- a/src/components/intro.scss
+++ b/src/components/intro.scss
@@ -2,20 +2,4 @@
     background: url("https://www.genengnews.com/wp-content/uploads/2020/03/Mar1_2020_GettyImages_1203771991_Coronavirus-scaled.jpg");
     min-height: 100vh;
     color: white;
-    max-width: 100vw;
-    overflow-x:hidden;
-}
-.coronaparticle {
-    position: absolute;
-    background: url("https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/SARS-CoV-2_without_background.png/220px-SARS-CoV-2_without_background.png")
-        center center / cover no-repeat;
-    display: block;
-    user-select: none;
-    pointer-events:none;
-}
-.plax {
-    width: 100vw;
-    position: absolute;
-    top: 0;
-    left: 0;
 }
